--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Set font for all text in webpage */
 body {
     font-family: 'Raleway', sans-serif;
     padding: 5%;
@@ -10,6 +11,10 @@ header {
 h1 {
     font-size: 45pt;
     text-align: center;
+}
+
+h2, h3 {
+    padding: 0.2cm 0.2cm 0.2cm 0.2cm;
 }
 
 a {
@@ -41,7 +46,39 @@ a :visited {
 
 .entry {
     background-color: hsl(54, 27%, 87%);
+    border-style: solid;
+    border-color: aliceblue;
+    border-width: 1em;
+    border-radius: 2vh;
+    display: block;
 }
+
+.entry-list-item {
+    list-style-type: square;
+
+}
+
+ section p {
+     padding: 1.05vw;
+ }
+
+ [class=entry-list] {
+    margin-left: 40px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: auto;
+ }
+
+ details > summary {
+     margin: 10px 10px 10px 10px;
+ }
+
+ #songs {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     flex-grow: 2;
+ }
 
 * {
     margin: 0;
